update menu switch

--- a/apps/frontend/src/layouts/layout.astro
+++ b/apps/frontend/src/layouts/layout.astro
@@ -88,7 +88,7 @@ const menuItems = [
 										)}
 										transition:name={active.includes(item.key) ? "auto": item.key}
 									/>
-									<a href={item.path} class="absolute top-0 left-0 h-[42px] px-2 items-center flex gap-3">
+									<a href={item.path} class="absolute top-0 left-0 h-[42px] w-full px-2 items-center flex gap-3">
 										<item.icon />
 										<div>{item.label}</div>
 									</a>
