--- a/apps/frontend/src/layouts/footer.astro
+++ b/apps/frontend/src/layouts/footer.astro
@@ -1,4 +1,6 @@
 ---
+    import { BlurrableImage } from "~/components/blurrable-image"
+
     import Twitter from "../components/icons/twitter.astro";
     import Linkedin from "../components/icons/linkedin.astro";
     import Github from "../components/icons/github.astro";
@@ -13,6 +15,7 @@
                         avatar {
                             publicUrl
                         }
+                        avatarBlurUrl
                         bio
                         displayEmail
                         displayName
@@ -28,11 +31,15 @@
 
 <!-- TODO: make this slide, from this view to notifications `npx khayaOS chat` -->
 <div class="flex mx-auto rounded-full py-2 px-8 gap-4 items-center shadow-xl window-blur">
-    <img src={data.config?.avatar?.publicUrl} class="rounded-full w-14 h-14">
+    <BlurrableImage 
+        src={data.config?.avatar?.publicUrl} srcBlur={data.config?.avatarBlurUrl} height={56} width={56} class="rounded-full" 
+        client:only="solid"
+        alt="🔥"
+    />
     <div>
         <div>{data.config.displayName}</div>
         <div class="text-sm w-60 truncate">
-            <span class="italic">Upshot:</span> {data.config?.bio}
+            <span class="italic">Upshot:</span>{" "}{data.config?.bio}
         </div>
     </div>
     
