--- a/apps/frontend/src/layouts/layout.astro
+++ b/apps/frontend/src/layouts/layout.astro
@@ -130,7 +130,8 @@ const menuItems = [
 
 	body {
 		background-attachment: fixed;
-		background-image: url("https://upshot.dev/workspace.jpg");
+		/* background-image: url("https://upshot.dev/workspace.jpg"); */
+		background-image: url("./workspace.jpg");
 		background-size: cover;
     	background-position-y: 40%;
 	}
