--- a/apps/frontend/src/layouts/layout.astro
+++ b/apps/frontend/src/layouts/layout.astro
@@ -129,7 +129,7 @@ const menuItems = [
 	}
 
 	body {
-		background-attachment: fixed;
+		/* background-attachment: fixed; */
 		/* background-image: url("https://upshot.dev/workspace.jpg"); */
 		background-image: url("/workspace.jpg");
 		background-size: cover;
@@ -140,14 +140,14 @@ const menuItems = [
 		.window-blur, .white-blur {
 			background: inherit;
 			backdrop-filter: blur(8px);
+			-webkit-backdrop-filter: blur(8px);
 
 			@apply bg-[#DDD6CD]/20;
 		}
 
 		.white-blur {
-			backdrop-filter: blur(8px);
-
-			@apply bg-white/60;
+			@apply bg-gradient-to-r from-white/10 to-white/0;
+			/* @apply bg-white/60 */
 		}
 
 		.steal-border {
