--- a/apps/frontend/src/pages/notes/[...slug].astro
+++ b/apps/frontend/src/pages/notes/[...slug].astro
@@ -1,36 +1,13 @@
 ---
+export const prerender = true
+
 import Layout from "~/layouts/layout.astro"
 import CaretIcon from "~/components/icons/caret.astro"
 
-import { DocumentRenderer } from "~/layouts/document"
+import { getCollection, type CollectionEntry } from "astro:content"
 
 export async function getStaticPaths() {
-    const { data: { notes } } = await fetch(
-        `${import.meta.env.PUBLIC_BACKEND_API}/api/graphql`,
-        {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({
-            query: `
-                {
-                    notes(where:{published:{equals:true}}) {
-                        id
-                        title
-                        description
-                        publishedAt
-                        content {
-                            document
-                        }
-                        slug
-                        cover {
-                            publicUrl
-                        }
-                    }
-                }
-            `,
-            }),
-        }
-    ).then((response) => response.json());
+    const notes = await getCollection("notes")
 
     return notes.map((note: any) => ({
         params: { slug: note.slug },
@@ -38,34 +15,33 @@ export async function getStaticPaths() {
     }))
 }
 
-const { title, description, cover, content } = Astro.props;
+export type Props = CollectionEntry<"notes">
+
+const { data, render } = Astro.props;
+
+const { Content } = await render();
 ---
 
-<Layout {...{ title }} active="note">
-    <div class="fixed pt-8 pb-4 w-full z-50 top-0 white-blur">
-        <a class="p-1 rounded-full bg-amber-200 inline-block" href="/notes">
-            <CaretIcon className="rotate-180 text-amber-800" size={12} />
-        </a>
-    </div>
-    <div class="max-w-2xl mx-auto flex flex-col w-full gap-5 mt-20">
-        <div class="relative w-full">
-            <img src={cover.publicUrl} alt="" class="rounded-md h-80 w-full object-cover">
-            <div class="absolute bottom-10 left-10 text-white">
-                <div class="text-2xl font-bold mb-3">{title}</div>
-                <div>{description}</div>
+<Layout {...{ title: data.title }} active="notes">
+    <div class="h-full bg-white rounded mb-1 border-[3px] flex gap-6 border-[#e5e7eb] p-10 w-full">
+        <div class="flex-1">
+            <div>
+                <a class="inline-block" href="/notes">
+                    <div class="mb-4 border border-slate-300/80 flex px-3 gap-1 py-1 text-sm items-center text-slate-600 rounded-full">
+                        <CaretIcon className="w-3 h-3 -scale-100" />
+                        <span>notes</span>
+                    </div>
+                </a>
             </div>
-        </div>
-        <div class="flex justify-between">
-            <div class="flex">
-                <div class="pr-2 shadow-sm bg-white">Typescript</div>
-                <div class="px-2 -ml-4 rounded-full shadow-sm border-l border-dashed bg-white">NodeJS</div>
-                <div class="px-2 -ml-4 rounded-full shadow-sm border-l border-dashed bg-white">React</div>
-            </div>
-            <div class="text-gray-500">21 May 2021</div>
-        </div>
 
-        <hr class="mb-4">
+            <div class="text-zcool mb-2">The Cultural Significance of Greenhouses</div>
+            <div class="text-sm text-slate-600">21 May 2021</div>
 
-        <DocumentRenderer document={content.document} />
+            <img src={data.cover} class="h-36 w-5/6 rounded object-cover mt-8 shadow-sm" />
+        </div>
+        <div class="w-[34rem] flex flex-col gap-6 blur-lg">
+            <Content />
+        </div>
+        <div class="flex-1" />
     </div>
 </Layout>
